Cambios realizados a todas las tablas del proyecto, para eliminar datos innecesarios, reposicionar, cambiar altura de las filas, añadir keys a las funciones map en el JSX y unificar las vistas en las que aparecen

--- a/src/TablaAdminClientesAsesor.css
+++ b/src/TablaAdminClientesAsesor.css
@@ -1,22 +1,13 @@
-h5 {
-    color: black;
-}
-
 .contenedorTablaClientesAsesor {
 	font-family: 'Raleway', sans-serif;
-	padding-bottom: 0%;
-	margin-bottom: 0%;
-	width: 100%;
-	max-height: 50vh;
 }
 
 .encabezadoTablaClientesAsesor {
 	background: #F2F5FA;
 	display: flex;
 	align-content: space-around;
-	max-height: 50%;
-	color: #0F123F;
-	text-align: left;
+	max-height: 100%;
+	color: black;
 	font-size: 150%;
 	height: 2.7em;
 	text-align: center;
@@ -24,18 +15,15 @@ h5 {
 
 #encabezadoNombreClientesAsesor {
 	width:61%;
-	text-align: left;
-	padding-left: 7%;
 }
 
 #encabezadoEstatusClientesAsesor {
-	width: 20%;
-    text-align: center;
+	width: 10.5%;
+	text-align: start;
 }
 
 #encabezadoAccionesClientesAsesor {
-	width: 15%;
-    text-align: center;
+	width: 23.5%;
 }
 
 #semaforoEstatusAutorizado {
@@ -51,6 +39,18 @@ h5 {
 }
 
 #semaforoEstatusNoAutorizado {
+    background-color:#a10909 ;
+    color: #a10909;
+    border-radius: 100%;
+    text-align: center;
+    width: 2em;
+    height: 2em;
+    padding-top: 0%;
+    padding-bottom: 0%;
+	margin-left: 10%;
+}
+
+#semaforoEstatusNoRevisado {
     background-color:#C4C4C4 ;
     color: #C4C4C4;
     border-radius: 100%;
@@ -60,79 +60,58 @@ h5 {
 	margin-left: 10%;
 }
 
-
-.rwd-table {
+.clientsTable2 {
+	font-family: "Raleway", sans-serif;
 	margin: 0.1em 0em;
 	width: 100%;
+	border-collapse: separate; 
+	border-spacing: 0em;
 }
 
 .tablaClientesAsesor {
-	max-height: 400px;
+	max-height: 55vh;
+	width: 100%;
 	overflow-y: scroll;
-	height: 300px;
   	scroll-behavior: smooth;
 	margin-top: 0em;
 	padding: 0em 0.2em 0em 0.2em;
-	text-align: left;
-	font-family: 'Raleway', sans-serif;
 	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeLegibility;
-	background: #F2F5FA;	
+	text-rendering: optimizeLegibility;	
+	background: white;
 	border-radius: 0.6em;
-	width: 100%;
 }
 
 tr:hover {background-color: #F2F5FA;}
 
-.rwd-table tr {
+.clientsTable2 tr {
 	border-bottom: 1px solid #F2F5FA;
-    color: black;
+	color: black;
 }
 
-.rwd-table th {
-	display: none;
-	overflow-y: none;
-}
-
-.rwd-table td {
-	display: block;
+.clientsTable2 td {
 	border-bottom: 1px solid #0F123F;
 }
 
-.rwd-table td:first-child {
+.clientsTable2 td:first-child {
 	padding-top: 0.5em;
 }
 
-.rwd-table td:last-child {
-	padding-bottom: 0.5em;
-}
-
-.rwd-table td:before {
+.clientsTable2 td:before {
 	font-weight: bold;
 	width: 6.5em;
 	display: inline-block;
 }
 
-@media (min-width: 380px) {
-    .rwd-table td:before {
-	display: none;
-	}
-}
-
-.rwd-table th, .rwd-table td {
-	text-align: left;
+.clientsTable2 th, .clientsTable2 td:nth-last-child(-n+2) {
+	text-align: center;
 }
 
 @media (min-width: 380px) {
-	.rwd-table th, .rwd-table td {
+	.clientsTable2 th, .clientsTable2 td {
 		display: table-cell;
-		padding: 0.25em 0.5em;
 	}
-	.rwd-table th:first-child, .rwd-table td:first-child {
+	.clientsTable2 th:first-child, .clientsTable2 td:first-child {
 		padding-left: 0;
-	}
-	.rwd-table th:last-child, .rwd-table td:last-child {
-	padding-right: 0;
 	}
 }
 
@@ -156,71 +135,22 @@ tr:hover {background-color: #F2F5FA;}
 	background-color: #C4C4C4;
 }
 
-.rwd-table {
-	background: white;
-	max-height: 50%;
-	color: #0F123F;
-	border-radius: 0.4em;
-	overflow: hidden;
-	text-align: left;
-	border-collapse:separate; 
-	border-spacing: 0em;
-	border-left: 0.5em solid white;
-	border-right: 0.5em solid white;
-}
-
-.rwd-table tr {
+.clientsTable2 tr {
 	border-color: #f2f5fa00;
 }
 
-.rwd-table th, .rwd-table td {
+.clientsTable2 th, .clientsTable2 td {
 	margin: 0.5em 1em;
 }
 
 @media (min-width: 480px) {
-	.rwd-table th, .rwd-table td {
-		padding: 0.3em !important;
+	.clientsTable2 th, .clientsTable2 td {
+		padding: 0.2em 1em 0.2em 1em !important;
 	}
 }
 
-.rwd-table th, .rwd-table td:before {
+.clientsTable2 th, .clientsTable2 td:before {
 	color: #0F123F;
     text-align: center;
     background-color: #F2F5FA;
-}
-
-.semaforoInfoClientesAsesor{
-	display: flex;
-	flex-direction: row;
-	padding-left: 10%;
-	font-family: 'Red Hat Display';
-	font-style: normal;
-	font-weight: bold;
-	color: #000000;
-}
-
-.verde{
-	padding-right: 5%;
-	
-}
-
-.semaforo{	
-	background-color:#84BC6A ;
-    color: #84BC6A;
-    border-radius: 100%;
-    text-align: center;
-    width: 2em;
-    height: 2em;
-    margin-left: 40%;
-}
-
-.semaforor {
-	align-items: center;
-    background-color:#722C2D ;
-    color: #722C2D;
-    border-radius: 100%;
-    text-align: center;
-    width: 2em;
-    height: 2em;
-    margin-left: 40%;
 }
