--- a/src/FormAutenticacion.css
+++ b/src/FormAutenticacion.css
@@ -1,8 +1,8 @@
 .contenedor{
-    width: 35%;
+    width: 35vw;
     background: #0F123F;
     border-radius: 62px;
-    padding: 30px;
+    padding: 2vw;
     display: flex;
     flex-direction: column;
     font-family: 'Raleway';
@@ -13,7 +13,7 @@
 .titulo{
     font-family: 'Red Hat Display';
     color: #fff;
-    margin-bottom: 50px;
+    margin-bottom: 7vh;
 }
 
 .contenedor input{
@@ -22,9 +22,9 @@
     border-style: none;
     background: #fff;
     font-weight: bold;
-    font-size: 24px;
-    margin-bottom: 50px;
-    padding: 20px;
+    font-size: 3vh;
+    margin-bottom: 5vh;
+    padding: 2.5vh;
 }
 
 input:focus{
@@ -39,7 +39,13 @@ input:focus{
     background: #EE786C;
     border-radius: 50px;
     font-family: 'Raleway';
-    font-size: 24px;
-    padding: 20px;
+    font-size: 3vh;
+    padding: 2.5vh;
     margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+    .contenedor {
+        width: 90vw;
+    }
 }
