--- a/src/VentanaInicioSesion.css
+++ b/src/VentanaInicioSesion.css
@@ -9,9 +9,18 @@
 }
 
 .logoMaltia{
-    margin: 80px;
-    margin-bottom: 50px;
-    width: 250px;
+    margin: 10vh;
+    margin-bottom: 5vh;
+    width: 18vw;
 }
 
+@media only screen and (max-width: 600px) {
+    .logoMaltia {
+        width: 50vw;
+        margin-bottom: 2vh;
+    }
 
+    .cont-padre {
+        background-color: #0F123F;
+    }
+}
