--- a/src/Bienvenida.css
+++ b/src/Bienvenida.css
@@ -1,26 +1,26 @@
 .bannerTitulo{
-    width: 40%;
-    padding: 20px;
+    width: 30.8vw;
+    padding: 1.15vw;
     font-family:'Red Hat Display';
     background: #0F123F;
-    border-radius: 37px;
+    border-radius: 2.1vw;
     color: #FFFFFF;
 }
 
 #txtBienvenida{   
     font-family: 'Raleway',sans-serif;
     font-weight: 400;
-    font-size: 18px;  
-    padding-left: 2%;
-    margin:0;
+    font-size: 1.05vw;  
+    padding-left: 0.5vw;
+    margin: 0;
 }
 
 #txtVentana{ 
     font-family: 'Red Hat Display',sans-serif;
     font-style: normal;
     font-weight: 900;
-    font-size: 30px;
-    padding-left: 1%;
+    font-size: 1.75vw;
+    padding-left: 0.5vw;
     margin: 0em;
     margin-top: 2%;
 }
