Cambios en los estilos de las tablas, botones, inputs, lateral y contenedores para hacer responsivas las vistas de usuarios con vh y vw

--- a/src/LandingAdminProspectos.css
+++ b/src/LandingAdminProspectos.css
@@ -2,16 +2,16 @@ main {
     display: flex;
     flex-direction: row;
     background-color: #0F123F;
-    border: 1em solid #0F123F;
+    border: 2vh solid #0F123F;
 }
 
 .contentPage { 
     background-color: #F2F5FA;
     border-radius: 10px;
     height: 85vh;
-    width: 85%;
+    width: 85vw;
     margin: 0%;
-    padding: 30px;
+    padding: 2vw;
 }
 
 header {
