--- a/src/InputFiltrar.css
+++ b/src/InputFiltrar.css
@@ -1,23 +1,23 @@
 .filterInput { 
-    width: 300px;
-    left: 354px;
-    top: 229px;
+    width: 17.7vw;
+    left: 18vw;
+    top: 17.3vw;
     background: #fff;
-    border-radius: 25px;
+    border-radius: 1vw;
     display: flex;
     align-items: center;
 }
 
 #searchFilter {
-    font-size: 18px;
+    font-size: 2.2vh;
     font-family: 'Red Hat Display';
     font-weight: bold;
     border-style: none;
     background: rgba(0, 0, 0, 0);
     width: 80%;
-    padding: 5px;
+    padding: 0.6vh;
     height: 100%;
-    margin-left: 10px;
+    margin-left: 1.2vh;
 }
 
 .filterInput i {
