--- a/src/LandingAnalista.css
+++ b/src/LandingAnalista.css
@@ -5,6 +5,7 @@
 }
 
 .semaforos {
+    font-size: 0.95vw;
     font-family: "Red Hat Display", sans-serif;
     font-weight: bold;
     padding-left: 4%;
@@ -32,8 +33,8 @@
 	background-color:#84BC6A ;
     color: #84BC6A;
     border-radius: 100%;
-    width: 2em;
-    height: 2em;
+    width: 2vw;
+    height: 2vw;
     margin-left: 5%;
 }
 
@@ -41,8 +42,8 @@
     background-color:#722C2D ;
     color: #722C2D;
     border-radius: 100%;
-    width: 2em;
-    height: 2em;
+    width: 2vw;
+    height: 2vw;
     margin-left: 5%;
 }
 
@@ -50,8 +51,8 @@
     background-color:#C4C4C4 ;
     color: #C4C4C4;
     border-radius: 100%;
-    width: 2em;
-    height: 2em;
+    width: 2vw;
+    height: 2vw;
     margin-left: 5%;
 }
 
@@ -59,27 +60,27 @@
     background-color:#a10909 ;
     color: #a10909;
     border-radius: 100%;
-    width: 2em;
-    height: 2em;
+    width: 2vw;
+    height: 2vw;
     margin-left: 5%;
 }
 
 .verde{
     padding-left: 10px;
-    line-height: 35px;
+    line-height: 2vw;
 }
 
 .rojo{
     padding-left: 10px;
-    line-height: 35px;
+    line-height: 2vw;
 }
 
 .gris{
     padding-left: 10px;
-    line-height: 35px;
+    line-height: 2vw;
 }
 
 .rojoEncendido{
     padding-left: 10px;
-    line-height: 35px;
+    line-height: 2vw;
 }
