--- a/src/Lateral.css
+++ b/src/Lateral.css
@@ -6,7 +6,7 @@
     align-items: center;
     height: 85vh;
     color: #fff;
-    width: 250px;
+    width: 14.5vw;
     font-family: 'Red Hat Display';
 }
 
@@ -15,8 +15,8 @@
 }
 
 .cont_icono{
-    width: 130px;
-    height: 130px;
+    width: 7.5vw;
+    height: 7.5vw;
     background: #fff;
     border-radius: 50%;
     display: flex;
@@ -24,43 +24,48 @@
     justify-content: center;
 }
 
+.icono_usuario {
+    width: 6vw;
+    height: 6vw;
+}
+
 .nombre_usuario{
     font-weight: normal;
     text-align: center;
+    font-size: 1vw;
 }
 
 .tabs{
-    padding: 30px 0;
+    padding: 1.7vw 0;
     height: 70vh;
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-
 a:focus .tab{
     text-align: left;
     width: 95%;
-    padding: 15px;
+    padding: 1.75vh;;
     background: #EE786C;
-    border-radius: 18px;
+    border-radius: 2vh;
     font-family:"Red Hat Display";
     font-weight: 900;
-    font-size: 24px;
-    line-height: 40px;
+    font-size: 1.29vw;
+    line-height: 4.75vh;
 }
 
 .tab{
     width: 60%;
-    padding: 15px;
-    border-radius: 18px;
+    padding: 1.75vh;
+    border-radius: 2vh;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 40px;
+    font-size: 1.15vw;
+    line-height: 4.75vh;
 }
 
 .tabs a{
-    padding-left: 30px;
+    padding-left: 1.7vw;
     text-align: left;
     text-decoration: none;
     color: #fff;
@@ -73,10 +78,146 @@ a:focus .tab{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 1vw;
 }
 
 
 .logout i{
-    font-size: 30px;
+    font-size: 1.7vw;
     color: #fff;
+}
+
+@media only screen and (max-width: 4500px) {
+    .tabsMoviles{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+
+    .contenedor-lateral{
+        display: none;
+    }
+
+    .tabsMoviles {
+        background-color: #0F123F;
+        display: contents;
+        display: flex;
+        position: absolute;
+        width: 100%;
+        height: 55px;
+        bottom: 0;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .tabsMoviles input {
+        display: none;
+    }
+
+    .tabsMoviles .round {
+        position: relative;
+        width: 45px;
+        height: 45px;
+        background: white;
+        border-radius: 50%;
+        transform: translate(0, 5px);
+        transition: transform 0.3s ease;
+        will-change: transform;
+        cursor: pointer;
+        z-index: 1;
+        text-align: center;
+    }
+
+    .tabsMoviles .round i {
+        color: #aaa;
+        line-height: 45px;
+    }
+
+    .tabsMoviles #back {
+        width: 100%;
+        position: absolute;
+        background: white;
+        height: 45px;
+        bottom: 0;
+        z-index: 0;
+      }
+    
+    .tabsMoviles #back::after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 60px;
+    background: #66ccff;
+    border-radius: 50%;
+    margin-top: -20px;
+    transform: translate(5px, 0);
+    will-change: transform;
+    transition: transform 0.2s ease;
+    }
+
+    .tabsMoviles #t0:checked + .round {
+    transform: translate(0, -7px);
+    box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.3);
+    }
+
+    .tabsMoviles #t0:checked + .round i {
+    color: #66ccff;
+    }
+
+    .tabsMoviles #t0:checked ~ #back::after {
+    transform: translate(5px, 0);
+    }
+
+    .tabsMoviles #t1:checked + .round {
+    transform: translate(0, -7px);
+    box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.3);
+    }
+
+    .tabsMoviles #t1:checked + .round i {
+    color: #66ccff;
+    }
+
+    .tabsMoviles #t1:checked ~ #back::after {
+    transform: translate(75px, 0);
+    }
+
+    .tabsMoviles #t2:checked + .round {
+    transform: translate(0, -7px);
+    box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.3);
+    }
+
+    .tabsMoviles #t2:checked + .round i {
+    color: #66ccff;
+    }
+
+    .tabsMoviles #t2:checked ~ #back::after {
+    transform: translate(145px, 0);
+    }
+
+    .tabsMoviles #t3:checked + .round {
+    transform: translate(0, -7px);
+    box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.3);
+    }
+
+    .tabsMoviles #t3:checked + .round i {
+    color: #66ccff;
+    }
+
+    .tabsMoviles #t3:checked ~ #back::after {
+    transform: translate(215px, 0);
+    }
+
+    .tabsMoviles #t4:checked + .round {
+    transform: translate(0, -7px);
+    box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.3);
+    }
+
+    .tabsMoviles #t4:checked + .round i {
+    color: #66ccff;
+    }
+
+    .tabsMoviles #t4:checked ~ #back::after {
+    transform: translate(285px, 0);
+    }
 }
