--- a/src/TablaProspectos.css
+++ b/src/TablaProspectos.css
@@ -14,8 +14,8 @@ h5 {
 	align-content: space-around;
 	max-height: 100%;
 	color: black;
-	font-size: 150%;
-	height: 2.7em;
+	font-size: 2.5vh;
+	height: 6.5vh;
 	text-align: center;
 }
 
@@ -28,23 +28,23 @@ h5 {
 }
 
 .prospectsTable {
-	margin: 0.1em 0em;
+	margin: 0.1vw 0vw;
 	width: 100%;
 	border-collapse: separate; 
-	border-spacing: 0em;
+	border-spacing: 0vw;
 }
 
 .tablaProspectos {
-	max-height: 50vh;
+	max-height: 55vh;
 	width:100%;
 	overflow-y: scroll;
   	scroll-behavior: smooth;
-	margin-top: 0em;
-	padding: 0em 0.2em 0em 0.2em;
+	margin-top: 0vw;
+	padding: 0vw 0.2vw 0vw 0.2vw;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;	
 	background: white;
-	border-radius: 0.6em;
+	border-radius: 0.6vw;
 }
 
 .prospectsTable tr {
@@ -57,12 +57,12 @@ h5 {
 }
 
 .prospectsTable td:first-child {
-	padding-top: 0.5em;
+	padding-top: 0.5vw;
 }
 
 .prospectsTable td:before {
 	font-weight: bold;
-	width: 6.5em;
+	width: 6.5vw;
 	display: inline-block;
 }
 
@@ -105,12 +105,12 @@ h5 {
 }
 
 .prospectsTable th, .prospectsTable td {
-	margin: 0.5em 1em;
+	margin: 0.5vw 1vw;
 }
 
 @media (min-width: 480px) {
 	.prospectsTable th, .prospectsTable td {
-		padding: 1em !important;
+		padding: 1.13vw !important;
 	}
 }
 
