--- a/src/TablaUsuarios.css
+++ b/src/TablaUsuarios.css
@@ -8,8 +8,8 @@
 	align-content: space-around;
 	max-height: 100%;
 	color: black;
-	font-size: 150%;
-	height: 2.7em;
+	font-size: 2.5vh;
+	height: 6.5vh;
 	text-align: center;
 }
 
@@ -26,10 +26,10 @@
 }
 
 .userTable {
-	margin: 0.1em 0em;
+	margin: 0.1vw 0vw;
 	width: 100%;
 	border-collapse: separate; 
-	border-spacing: 0em;
+	border-spacing: 0vw;
 }
 
 .tablaUsuarios {
@@ -37,12 +37,12 @@
 	width:100%;
 	overflow-y: scroll;
   	scroll-behavior: smooth;
-	margin-top: 0em;
-	padding: 0em 0.2em 0em 0.2em;
+	margin-top: 0vw;
+	padding: 0vw 0.2vw 0vw 0.2vw;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;	
 	background: white;
-	border-radius: 0.6em;
+	border-radius: 0.6vw;
 }
 
 tr:hover {background-color: #F2F5FA;}
@@ -57,12 +57,12 @@ tr:hover {background-color: #F2F5FA;}
 }
 
 .userTable td:first-child {
-	padding-top: 0.5em;
+	padding-top: 0.5vw;
 }
 
 .userTable td:before {
 	font-weight: bold;
-	width: 6.5em;
+	width: 6.5vw;
 	display: inline-block;
 }
 
@@ -104,12 +104,12 @@ tr:hover {background-color: #F2F5FA;}
 }
 
 .userTable th, .userTable td {
-	margin: 0.5em 1em;
+	margin: 0.5vw 1vw;
 }
 
 @media (min-width: 480px) {
 	.userTable th, .userTable td {
-		padding: 1.13em !important;
+		padding: 1.15vw 1.13vw !important;
 	}
 }
 
