--- a/src/UsuarioNoEncontrado.css
+++ b/src/UsuarioNoEncontrado.css
@@ -1,17 +1,10 @@
-main {
-    display: flex;
-    flex-direction: row;
-    background-color: #0F123F;
-    border: 1em solid #0F123F;
-}
-
 .contentPage { 
     background-color: #F2F5FA;
     border-radius: 10px;
-    height: 88vh;
+    height: 91vh;
     width: 85%;
     margin: 0%;
-    padding: 30px;
+    padding: 1vw;
 }
 
 header {
