Cambios a los semáforos de la tabla de analista

--- a/src/LandingAnalista.css
+++ b/src/LandingAnalista.css
@@ -39,8 +39,8 @@
 }
 
 .semaforor {
-    background-color:#722C2D ;
-    color: #722C2D;
+    background-color:#f17b0d;
+    color: #f17b0d;
     border-radius: 100%;
     width: 2vw;
     height: 2vw;
