--- a/src/TablaClientes.css
+++ b/src/TablaClientes.css
@@ -38,8 +38,8 @@
 }
 
 #semaforoEstatusDispuesto {
-    background-color:#722C2D ;
-    color: #722C2D;
+    background-color:#f17b0d ;
+    color: #f17b0d;
     border-radius: 100%;
     text-align: center;
     width: 2vw;
