--- a/src/VentanaAgregarUsuario.css
+++ b/src/VentanaAgregarUsuario.css
@@ -1,10 +1,10 @@
-.contentPageAgregarUsuario { 
+.contentPageFormsUsuario{ 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     background-color: #F2F5FA;
     border-radius: 10px;
-    height: 85vh;
+    height: auto;
     width: 85%;
     margin: 0%;
     padding: 30px 50px;
@@ -21,9 +21,11 @@
 
 .inputsContentPage {
     width: 100%;
+    height: 35vh;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: row;   
+    justify-content: space-around;
+    align-content: space-around;
     flex-wrap: wrap
 }
 
@@ -37,4 +39,15 @@
 
 .botonAzulMarino{
     margin-right: 5%;
+}
+
+
+@media (max-width: 860px){
+
+    .contentPageAgregarUsuario {
+        height: auto;
+    }
+    .inputsContentPage{
+        height: 70vh;
+    }
 }
