--- a/src/AdministracionClientesAsesor.css
+++ b/src/AdministracionClientesAsesor.css
@@ -3,3 +3,12 @@
     padding-left: 4%;
     padding-right: 4%;
 }
+
+@media only screen and (max-width: 600px) {
+    .tablaContentPageAsesor {
+        padding-left: 5vw;
+        padding-right: 4%;
+        height: 30vh;
+        width: 100%;
+    }
+}
