--- a/src/Bienvenida.css
+++ b/src/Bienvenida.css
@@ -24,3 +24,19 @@
     margin: 0em;
     margin-top: 2%;
 }
+
+@media only screen and (max-width: 600px) {
+    #txtBienvenida {
+        font-size: 5vw;
+        width: 80vw;
+        padding-left: 5vw;
+        font-weight: bold;
+    }
+
+    #txtVentana {
+        font-size: 8vw;
+        width: 80vw;
+        padding-left: 5vw;
+        font-weight: bold;
+    }
+}
