--- a/src/InputFiltrar.css
+++ b/src/InputFiltrar.css
@@ -1,27 +1,19 @@
 .filterInput { 
+    background: #fff;
+    border-radius: 1vw;
     width: 17.7vw;
     left: 18vw;
     top: 17.3vw;
-    background: #fff;
-    border-radius: 1vw;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-}
-
-#searchFilter {
-    font-size: 2.2vh;
-    font-family: 'Red Hat Display';
-    font-weight: bold;
-    border-style: none;
-    background: rgba(0, 0, 0, 0);
-    width: 80%;
-    padding: 0.6vh;
     height: 100%;
-    margin-left: 1.2vh;
 }
 
 .filterInput i {
+    width: 20%;
     color: #0F123F;
+    margin-left: 0vw;
 }
 
 .dropFilter {        
