--- a/src/VentanaEditarUsuario.css
+++ b/src/VentanaEditarUsuario.css
@@ -45,3 +45,25 @@ main {
 .botonAzulMarino{
     margin-right: 5%;
 }
+
+@media only screen and (max-width: 600px) {
+    main {
+        border: none;
+        background-color: #0F123F;
+    }
+
+    body {
+        background-color: #0F123F;
+    }
+
+    aside {
+        width: 0px;
+    }
+
+    header {
+        background-color: #0F123F;
+        border-top: 0px;
+        border-left: 0px;
+        width: fit-content;
+    }
+}
