--- a/src/views/AgregarEditarUsuario.css
+++ b/src/views/AgregarEditarUsuario.css
@@ -1,13 +1,36 @@
-.contentPageFormsUsuario{ 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+.contentPageForms{ 
     background-color: #F2F5FA;
     border-radius: 10px;
     height: auto;
     width: 85%;
     margin: 0%;
-    padding: 30px 50px;
+    padding: 1vw;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.tag-fecha{
+    font-family: "Raleway", sans-serif;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    text-align: center;
+    font-size: 18px;
+    vertical-align: middle;
+    background-color: #A5A5A5;
+    border: 2px solid #A5A5A5;
+    color: white;
+    font-weight: 400;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 14em;
 }
 
 .radiosContentPage {
@@ -40,7 +63,19 @@
     margin-right: 5%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 576px) {
+
+    header{
+        flex-direction: column;
+    }
+
+    header .tag-fecha{
+        width: 50%;
+    }
+
+    .contentPageForms{
+        background-color: #0F123F;
+    }
     main {
         border: none;
         background-color: #0F123F;
@@ -50,24 +85,17 @@
         background-color: #0F123F;
     }
 
-    aside {
-        width: 0px;
+    .radiosContentPage {
+        justify-content:center;
+       
     }
 
-    header {
-        background-color: #0F123F;
-        border-top: 0px;
-        border-left: 0px;
-        width: fit-content;
-    }
-}
-
-@media (max-width: 860px){
-
-    .contentPageAgregarUsuario {
-        height: auto;
-    }
     .inputsContentPage{
-        height: 70vh;
+        height: 65vh;
     }
+
+    .botonesContentPage{
+        margin-bottom: 50px;
+    }
+   
 }
