--- a/src/components/InfoSolicitud.css
+++ b/src/components/InfoSolicitud.css
@@ -37,3 +37,13 @@
     width: 50%;
     text-align: center;
 }
+
+@media only screen and (max-width:576px){
+    .solicitudSeguimiento{
+        width: 100%;
+    }
+
+    .header-sol{
+        color: #fff !important;
+    }
+}
