--- a/src/views/ModalDeshabilitarEmpleado.css
+++ b/src/views/ModalDeshabilitarEmpleado.css
@@ -1,12 +1,37 @@
+.modalPadre{
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding-top: 30vh;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.4);
+    -webkit-transition: 0.5s;
+    overflow: auto;
+    transition: all 0.3s linear;
+    backdrop-filter: blur(5px);
+}
+
+.overlay{
+    background: rgba(53, 63, 94, 0.3);
+    backdrop-filter: blur(20px);
+}
+
 .err{
     padding: 30px;
     width: 40vw;
-    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
     background: #FFF8F8;
+    margin-top: -70vh;
+    position: absolute;
+    z-index: 10;
 }
 
 .err i{
