--- a/src/views/SeguimientoCliente1.css
+++ b/src/views/SeguimientoCliente1.css
@@ -65,17 +65,7 @@
 }
 
 
-.tooltip{
-    opacity: 0;
-    visibility: hidden;
-    padding: 5px;
-    font-size: 16px;
-    position: absolute;
-    background: #C4C4C4;
-    border-radius: 10px;
-    margin-top: -120px;
-    margin-left: 300px;
-}
+
 
 .input-ayuda i:hover .tooltip{
     visibility: visible;
@@ -92,7 +82,37 @@
 }
 
 
+@media only screen and (max-width:576px){
+    .contentPageSeguimiento{
+        background-color: #0F123F;
+        color: #fff;
+        padding: 5vw;
+    }
 
+    .mainContentPageSeguimiento{
+        flex-direction: column;
+        justify-content: center;
+        color: #fff;
+    }
+
+
+    .lineaSeguimiento{
+        display: none;
+    }
+
+    .accionesSeguimiento{
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+    }
+
+   
+    .pregunta-capacidad, .pregunta-antiguedad{
+        margin-top: 0;
+        color: #fff;
+    }
+}
 
 
 
