--- a/src/components/BotonRegresar.css
+++ b/src/components/BotonRegresar.css
@@ -15,3 +15,9 @@
     font-size: 40px;
     color: #F2F5FA;
 }
+
+@media only screen and (max-width:576px){
+    .regresar{
+        display: none;
+    }
+}
