--- a/src/components/Boton.css
+++ b/src/components/Boton.css
@@ -358,7 +358,7 @@ button:active {
     transform: scale(.98);
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 576px) {
     #botonEditarUsuario {
         background-color: transparent;
         border-color: transparent;
@@ -441,6 +441,11 @@ button:active {
     #botonSeguimiento i {
         display: contents;
         color: #0F123F;
+    }
+    .botonAzulMarino {
+        background: none;
+       border: 2px solid #EE786C;
+       
     }
 }
 
